--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@pepperi-addons/papi-sdk": "^1.29.1",
+		"@pepperi-addons/papi-sdk": "file:../papi-sdk",
 		"@pepperi-addons/scripts": "^2.0.4"
 	}
 }
