--- a/server-side/package.json
+++ b/server-side/package.json
@@ -29,6 +29,8 @@
     },
     "dependencies": {
         "@pepperi-addons/debug-server": "0.0.30",
-        "@pepperi-addons/papi-sdk": "^1.24.0"
+        "@pepperi-addons/papi-sdk": "file:../../papi-sdk",
+        "aws-sdk": "^2.1018.0",
+        "jsonschema": "^1.4.0"
     }
 }
